deps/chakrashim/core/test/strict/multiunit.baseline
SyntaxError: Duplicate formal parameter names not allowed in strict mode
	at code (multiunit.js:43:17)
